[package]
name = "simple_ai_editor"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "SimpleAIEditor"
path = "src/main.rs"

[build-dependencies]
copy_dir = { version = "0.1.3" }

[dependencies]
async-recursion = { version = "1.1.1" }
chrono = { version = "0.4.38", features = ["serde"] }
#simple_ai_backend = { git = "" }
dioxus = { path = "../dioxus/packages/dioxus" }
futures = "0.3.31"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
dirs = { version = "5.0.1" }
toml = { version = "0.8.19" }
anyhow = { version = "1.0.95" }
colored = { version = "2.0.4" }
regex = { version = "1.11.1" }

[features]
default = ["desktop"]
desktop = ["dioxus/desktop"]
web = ["dioxus/web"]
mobile = ["dioxus/mobile"]
dev = ["dioxus/devtools", "dioxus/liveview"]


