[package]
name = "LibFrontSimpleNodeEditor"
version = "0.1.0"
description = "SNE frontend library."
authors = ["raspirat", "sert"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.60"

[lib]
name = "libfrontsne"
path = "app/src/rust/main.rs"

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
LibBackSimpleNodeEditor = { path = "extern/backend"}
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.4", features = [ "window-set-fullscreen", "window-unminimize", "window-unmaximize", "window-start-dragging", "window-hide", "window-minimize", "window-maximize", "window-show", "window-close"] }
url = { version = "2", features = ["serde"] }
toml = "0.8.13"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
