[package]
name = "sai_backend"

[features]
default = []
desktop = []
web = []
mobile = []

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133" }
dirs = { version = "6.0.0" }
toml = { version = "0.8.19" }
derive-new = { version = "0.7.0" }
derive_builder = { version = "0.20.2" }
